--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
   <link rel="stylesheet" href="font-awesome/css/font-awesome.css">
 
 
-    <link href='http://fonts.googleapis.com/css?family=Lato:300,400,700,900,400italic,700italic' rel='stylesheet' type='text/css'>
+    <link href='https://fonts.googleapis.com/css?family=Lato:300,400,700,900,400italic,700italic' rel='stylesheet' type='text/css'>
 </head>
 
 <body  class="{{containerClass}}" id="content" >
@@ -37,7 +37,7 @@
 
    </body>
 </div>
-    <script src="http://code.angularjs.org/1.2.13/angular.js"></script>
+    <script src="https://code.angularjs.org/1.2.13/angular.js"></script>
     <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
     <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.8/angular-ui-router.min.js"></script>
    <script src="app.js" type="text/javascript" charset="utf-8" ></script>
